--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,64 @@
-services:
-  server:
-    image: anshavikhanna/platemate-backend:latest
-    container_name: myapp-node-server
-    ports:
-      - "5001:5001"
-    environment:
-      - NODE_ENV=development
-    networks:
-      - app-network
-    depends_on:
-      - client
-    volumes:
-      - node_modules:/app/node_modules
-    dns:
-      - 8.8.8.8  # Use Google's public DNS to ensure proper DNS resolution
+# services:
+#   server:
+#     image: anshavikhanna/platemate-backend:latest
+#     container_name: myapp-node-server
+#     ports:
+#       - "5001:5001"
+#     environment:
+#       - NODE_ENV=development
+#     networks:
+#       - app-network
+#     depends_on:
+#       - client
+#     volumes:
+#       - node_modules:/app/node_modules
+#     dns:
+#       - 8.8.8.8  # Use Google's public DNS to ensure proper DNS resolution
 
-  client:
-    image: anshavikhanna/platemate-frontend:latest
-    container_name: myapp-react-client
+#   client:
+#     image: anshavikhanna/platemate-frontend:latest
+#     container_name: myapp-react-client
+#     ports:
+#       - "3000:3000"
+#     environment:
+#       - NODE_ENV=development
+#     networks:
+#       - app-network
+#     volumes:
+#       - node_modules:/app/node_modules
+
+# networks:
+#   app-network:
+#     driver: bridge
+
+# volumes:
+#   node_modules:
+
+version: '3.8'
+
+services:
+  frontend:
+    build: 
+      context: ./frontend
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=development
+      - REACT_APP_API_URL=http://backend:5001
+    depends_on:
+      - backend
     networks:
       - app-network
-    volumes:
-      - node_modules:/app/node_modules
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "5001:5001"
+    networks:
+      - app-network
 
 networks:
   app-network:
     driver: bridge
-
-volumes:
-  node_modules:
