--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ services:
       - logstash
     volumes:
       - /app/node_modules
-      - /Users/anshavikhanna/Desktop/SEM 7/SPE/PlateMate/app.log:/app/app.log
+      - /home/karan/Desktop/PlateMate/app.log:/app/app.log
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.10
@@ -83,8 +83,8 @@ services:
     image: docker.elastic.co/logstash/logstash:7.17.10
     container_name: logstash
     volumes:
-      - /Users/anshavikhanna/Desktop/SEM 7/SPE/PlateMate/app.log:/app/app.log
-      - /Users/anshavikhanna/Desktop/SEM 7/SPE/PlateMate/logstash.conf:/usr/share/logstash/pipeline/logstash.conf:ro
+      - /home/karan/Desktop/PlateMate/app.log:/app/app.log
+      - /home/karan/Desktop/PlateMate/logstash.conf:/usr/share/logstash/pipeline/logstash.conf:ro
     environment:
       - xpack.monitoring.enabled=false
     networks:
