--- a/playbook-k8.yaml
+++ b/playbook-k8.yaml
@@ -12,4 +12,4 @@
       
 
     - name: Apply Kubernetes manifests
-      command: kubectl apply -f /tmp/PlateMate-k8/kub
+      command: kubectl apply -f /tmp/PlateMate-k8/kub --insecure-skip-tls-verify
